Clean up of GUI

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -201,7 +201,7 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://movielist-render-deployment.onrender.com/login" target="_blank" class="blog-img"><img src="images/moviilist.png" class="img-responsive"></a>
+								<a href="https://movielist-render-deployment.onrender.com/login" target="_blank" class="blog-img"><img src="images/movielist.jpeg" class="img-responsive"></a>
 								<div class="desc">
 									<span><small><a href="https://movielist-render-deployment.onrender.com/login">Project</a> | <a href="https://github.com/JackHenry-G/movielist">Code</a></small></span>
 									<span><small>SPRING BOOT | REST API | DOCKER</small></span>
@@ -212,7 +212,7 @@
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://movielist-render-deployment.onrender.com/login" target="_blank" class="blog-img"><img src="images/TopMovies.png" class="img-responsive"></a>
+								<a href="https://github.com/JackHenry-G/TopMoviesProject" target="_blank" class="blog-img"><img src="images/TopMovies.png" class="img-responsive"></a>
 								<div class="desc">
 									<span><small><a href="https://github.com/JackHenry-G/TopMoviesProject">Code</a></small></span>
 									<span><small>SWING GUI | SERIALIZATION | THREADING </small></span>
@@ -262,12 +262,8 @@
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Full Stack Development</h3>
-									<p>Java - Spring Boot, Lombok, Eclipse Jersey</p>
-									<p>Python - Django, Numpy, Pandas</p>
-									<p>Web - HTML, CSS, JS, FreeMarker, Thymeleaf</p>
-									<p>Testing - JUnit, Mockito</p>
-									<p>Logging - Log4j, Sl4j</p>
+									<h3>Languages</h3>
+									<p>Java, Python, HTML, CSS, JS, SQL, No-SQL</p>
 								</div>
 							</div>
 						</div>
@@ -278,7 +274,7 @@
 								</span>
 								<div class="desc">
 									<h3>Databases</h3>
-									<p>ArangoDB (Graph), DynamoDB and PostgreSQL</p>
+									<p>PostgreSQL, ArangoDB (Graph), DynamoDB</p>
 								</div>
 							</div>
 						</div>
@@ -288,12 +284,8 @@
 									<i class="icon-layers2"></i>
 								</span>
 								<div class="desc">
-									<h3>DevOps</h3>
-									<p>OS - Linux</p>
-									<p>Containerization - Docker</p>
-									<p>Version Control - GitLab, GitHub</p>
-									<p>CI/CD - GitHub Actions</p>
-									<p>IaC - AWS SAM</p>
+									<h3>Frameworks</h3>
+									<p>J2EE, Spring Boot, Thymeleaf, JUnit, Mockito</p>
 								</div>
 							</div>
 						</div>
@@ -303,8 +295,8 @@
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Cloud</h3>
-									<p>EC2, S3, DynamoDB, Lambda, API Gateway, AWS SAM, IAM, CloudFront...</p>
+									<h3>Other</h3>
+									<p>AWS Cloud, Docker, Linux, Maven, GitHub and Gitlab</p>
 								</div>
 							</div>
 						</div>
@@ -314,8 +306,8 @@
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Other</h3>
-									<p>JIRA, Confluence, MIRO</p>
+									<h3>Soft Skills</h3>
+									<p>Product Management, agile, JIRA, Confluence, MIRO</p>
 								</div>
 							</div>
 						</div>
