--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -151,7 +151,7 @@
 										<span class="heading-meta">Who Am I?</span>
 										<h2 class="colorlib-heading">About me</h2>
 										<p>
-											A professional Full-Stack Java Developer with 2 years experience, a 1st class BSc (Hons) in Software Engineering 
+											A professional Full-Stack Java Developer with 2.5+ years experience, a 1st class BSc (Hons) in Software Engineering 
 											and 4.5+ years of cumulative experience in the tech industry with stints in product management and technical sales. 
 											This unique blend creates an effective communicator able to bridge the gap between development and business to build 
 											a valuable product. Quick learner ready to contribute to success.
