Adding data analysis project

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -151,8 +151,8 @@
 										<span class="heading-meta">Who Am I?</span>
 										<h2 class="colorlib-heading">About me</h2>
 										<p>
-											A professional Full-Stack Java Developer with 2.5+ years experience, a 1st class BSc (Hons) in Software Engineering 
-											and 4.5+ years of cumulative experience in the tech industry with stints in product management and technical sales. 
+											A versatile Java Developer with 2+ years experience and a 1st class BSc (Hons) in Software Engineering. Complemented by
+											further experience roles involving Product Management and Data Analysis. 
 											This unique blend creates an effective communicator able to bridge the gap between development and business to build 
 											a valuable product. Quick learner ready to contribute to success.
 										</p>
@@ -175,13 +175,13 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
 									<div class="services color-4">
 										<span class="icon2"><i class="icon-phone3"></i></span>
-										<h3>Agile Advocate</h3>
+										<h3>Product Manager</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 									<div class="services color-3">
 										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Product Manager</h3>
+										<h3>Data Analyst</h3>
 									</div>
 								</div>
 							</div>
@@ -199,6 +199,17 @@
 						</div>
 					</div>
 					<div class="row">
+						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="https://public.tableau.com/app/profile/jack.goggin/viz/Evolutionofdinosaurs/DinosaursThroughtimeandspace" target="_blank" class="blog-img"><img src="images/dino_data_analysis.jpeg" class="img-responsive"></a>
+								<div class="desc">
+									<span><small><a href="https://public.tableau.com/app/profile/jack.goggin/viz/Evolutionofdinosaurs/DinosaursThroughtimeandspace" targe="_blank">Dashboard</a></small></span>
+									<span><small>Tableau | Python</small></span>
+									<h3>A data analysis piece</h3>
+									<p>Using Tableau and Python I created a short but sweet data analysis piece on the evolution and findings of dinosaurs found at the Natural History Museum in London.</p>
+								</div>
+							</div>
+						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
 								<a href="https://movielist-render-deployment.onrender.com/login" target="_blank" class="blog-img"><img src="images/movielist.jpeg" class="img-responsive"></a>
