--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -201,12 +201,12 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://public.tableau.com/app/profile/jack.goggin/viz/Evolutionofdinosaurs/DinosaursThroughtimeandspace" target="_blank" class="blog-img"><img src="images/dino_data_analysis.jpeg" class="img-responsive"></a>
+								<a href="https://public.tableau.com/app/profile/jack.goggin/vizzes" target="_blank" class="blog-img"><img src="images/dino_data_analysis.jpeg" class="img-responsive"></a>
 								<div class="desc">
-									<span><small><a href="https://public.tableau.com/app/profile/jack.goggin/viz/Evolutionofdinosaurs/DinosaursThroughtimeandspace" targe="_blank">Dashboard</a></small></span>
+									<span><small><a href="https://public.tableau.com/app/profile/jack.goggin/vizzes" targe="_blank">Dashboard</a></small></span>
 									<span><small>Tableau | Python</small></span>
-									<h3>A data analysis piece</h3>
-									<p>Using Tableau and Python I created a short but sweet data analysis piece on the evolution and findings of dinosaurs found at the Natural History Museum in London.</p>
+									<h3>Data Analysis</h3>
+									<p>See my Tableau vizzes where I complete analysis on data using Tableua and Python. Examples pices include: "Are we getting better at making movies?"</p>
 								</div>
 							</div>
 						</div>
