Editing of project images

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -201,7 +201,7 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://public.tableau.com/app/profile/jack.goggin/vizzes" target="_blank" class="blog-img"><img src="images/dino_data_analysis.jpeg" class="img-responsive"></a>
+								<a href="https://public.tableau.com/app/profile/jack.goggin/vizzes" target="_blank" class="blog-img"><img src="images/tableau_image.png" class="img-responsive"></a>
 								<div class="desc">
 									<span><small><a href="https://public.tableau.com/app/profile/jack.goggin/vizzes" targe="_blank">Dashboard</a></small></span>
 									<span><small>Tableau | Python</small></span>
@@ -212,7 +212,7 @@
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://movielist-render-deployment.onrender.com/login" target="_blank" class="blog-img"><img src="images/movielist.jpeg" class="img-responsive"></a>
+								<a href="https://movielist-render-deployment.onrender.com/login" target="_blank" class="blog-img"><img src="images/movielist_image.png" class="img-responsive"></a>
 								<div class="desc">
 									<span><small><a href="https://movielist-render-deployment.onrender.com/login">Project</a> | <a href="https://github.com/JackHenry-G/movielist">Code</a></small></span>
 									<span><small>SPRING BOOT | REST API | DOCKER</small></span>
@@ -234,7 +234,7 @@
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i" target="_blank" class="blog-img"><img src="images/aws.png" class="img-responsive"></a>
+								<a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i" target="_blank" class="blog-img"><img src="images/cloud_resume_challenge.png" class="img-responsive"></a>
 								<div class="desc">
 									<span><small><a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i">Blog</a></small></span>
 									<span><small>AWS | CI/CD | CLOUD | PYTHON</small></span>
