Updated project titles

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -214,10 +214,10 @@
 							<div class="blog-entry">
 								<a href="https://movielist-render-deployment.onrender.com/login" target="_blank" class="blog-img"><img src="images/movielist_image.png" class="img-responsive"></a>
 								<div class="desc">
-									<span><small><a href="https://movielist-render-deployment.onrender.com/login">Project</a> | <a href="https://github.com/JackHenry-G/movielist">Code</a></small></span>
-									<span><small>SPRING BOOT | REST API | DOCKER</small></span>
+									<span><small><a href="https://movielist-render-deployment.onrender.com/login">Website</a> | <a href="https://github.com/JackHenry-G/my-movielist-in-react">Frontend code</a></small> | <small><a href="https://github.com/JackHenry-G/MovieListApi">Backend code</a></small></span>
+									<span><small>SPRING BOOT | REACT | REST API | DOCKER</small></span>
 									<h3>MovieList - a website for rating movies</h3>
-									<p>A small Spring Boot Java web application that allows you to create a personalized list of your movie viewing history along with ratings and then be notified when they show in a cinema near you!</p>
+									<p>A Spring Boot & React web application that allows you to create a personalized list of your movie viewing history along with ratings and then be notified when they show in a cinema near you!</p>
 								</div>
 							</div>
 						</div>
